--- a/values.yaml
+++ b/values.yaml
@@ -67,8 +67,8 @@ global:
   redis:
     password:
       enabled: true
-      # secret:
-      # key:
+      secret: gitlab-redis-secret
+      key: secret
     # host: redis.hostedsomewhere.else
     # port: 6379
 
@@ -183,7 +183,7 @@ global:
       startTls: false
       user: ""
       password:
-        secret: ""
+        secret: "gitlab-mailroom-secret"
         key: password
       mailbox: inbox
       idleTimeout: 60
@@ -515,3 +515,5 @@ gitlab:
     enabled: false
   gitlab-exporter:
     enabled: false
+  mailroom:
+    enabled: true
