--- a/values.yaml
+++ b/values.yaml
@@ -413,6 +413,8 @@ postgresql:
 ## doc/architecture/decisions.md#registry
 ## doc/charts/registry/
 registry:
+  image:
+    repository: dev.gitlab.org:5005/gitlab/charts/components/images/gitlab-container-registry
   draintimeout: '60s'
   enabled: true
   deployment:
