Updates our CPU target to 80%
* This is a means to toy with the HPA and see what happens when we
modify the target average cpu utilization metric that governs the HPA
* We set it to 80% here in order to view how much CPU ends up used
across all Pods for this deployment
* This requires an upgrade to the helm chart
  * Which subsequently requires changing where the nested value of
  `maxReplicas` is maintained

--- a/gprd.yaml
+++ b/gprd.yaml
@@ -7,7 +7,8 @@ registry:
     # CI_APPLICATION_TAG for this environment
     # in the container_scanning job
     tag: v2.7.2-gitlab
-  maxReplicas: 150
+  hpa:
+    maxReplicas: 150
   resources:
     requests:
       cpu: 200m
