--- a/gstg.yaml
+++ b/gstg.yaml
@@ -21,6 +21,7 @@ global:
       address: "incoming-staging+%{key}@incoming.gitlab.com"
       user: "incoming-staging@gitlab.com"
   redis:
+    host: "gstg-redis"
     sentinels:
     - host: "redis-01-db-gstg.c.gitlab-staging-1.internal"
       port: "26379"
