--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,10 @@ variables:
   extends:
     - .except-com
     - .cluster-init-before-script
+  artifacts:
+    paths:
+      - ci.yaml
+    expire_in: 1 week
 
 .pre:
   environment:
