--- a/values.yaml
+++ b/values.yaml
@@ -55,9 +55,9 @@ global:
 
   ## doc/charts/globals.md#configure-postgresql-settings
   psql:
-    password: {}
-      # secret:
-      # key:
+    password:
+      secret: gitlab-postgres-credential
+      key: secret
     # host: postgresql.hostedsomewhere.else
     # port: 123
     # username: gitlab
