Removes config items in sidekiq
* This simply removes configurations that are not set in our omnibus
installations
* This is probably not actually going to do anything due to features
being disabled, but this contributes to a delta we see when comparing
the configuration files

--- a/pre.yaml
+++ b/pre.yaml
@@ -45,6 +45,7 @@ global:
           key: provider
   email:
     from: notify@mg.pre.gitlab.com
+    reply_to: noreply@gitlab.com
 
   gitaly:
     external:
