--- a/values.yaml
+++ b/values.yaml
@@ -531,6 +531,14 @@ gitlab:
       tokenIssuer: omnibus-gitlab-issuer
     trusted_proxies:
       - 10.0.0.0/8
+    extraVolumeMounts: |
+      - name: sidekiq-shared
+        mountPath: /srv/gitlab/shared
+        readOnly: false
+    extraVolumes: |
+      - name: sidekiq-shared
+        emptyDir:
+          sizeLimit: 50G
   # doc/charts/gitlab/gitaly
   gitaly:
     enabled: false
