Limits sidekiq to only project_export
* Doing this as to limit the scope of impact when we transition from
VM's to Kubernetes
* Project Export is a test queue that we know works, this enables us to
focus only on this queue in kubernetes to validate this all the way into
production
* The settings copied into here mimic those of production
  * we have 4 sidekiq-export nodes
  * each node runs 4 sidekiq processes
  * The concurrency per process is set to 1

--- a/values.yaml
+++ b/values.yaml
@@ -527,6 +527,13 @@ gitlab:
     enabled: false
     metrics:
       enabled: true
+    pods:
+      - name: export
+        concurrency: 1
+        minReplicas: 1
+        maxReplicas: 16
+        queues:
+          - [project_export, 1]
     registry:
       tokenIssuer: omnibus-gitlab-issuer
     trusted_proxies:
