Bring omniauth close to pre configuration
* Brings in the configuration for omniauth closer to what the omnibus
configuration already represents

--- a/values.yaml
+++ b/values.yaml
@@ -219,7 +219,7 @@ global:
       autoSignInWithProvider:
       syncProfileFromProvider: []
       syncProfileAttributes: ['email']
-      allowSingleSignOn: ['saml']
+      allowSingleSignOn: true
       blockAutoCreatedUsers: true
       autoLinkLdapUser: false
       autoLinkSamlUser: false
