--- a/values.yaml
+++ b/values.yaml
@@ -525,6 +525,7 @@ gitlab:
     enabled: false
     metrics:
       enabled: true
+      port: 8083
     pods:
       - name: export
         concurrency: 1
