Sets resources requests and limits for sidekiq export
* Uses the default settings for requests
* Sets the CPU limits to match something reasonable based on metrics and
  testing
* Sets the memory limits to match those set by the RSS killer configured
  specifically for the sidekiq-export fleet
  * We will not use the RSS killer as this been suspected to cause
    issues in the Kubernetes environment: https://gitlab.com/gitlab-org/charts/gitlab/issues/1692

--- a/values.yaml
+++ b/values.yaml
@@ -533,6 +533,13 @@ gitlab:
         maxReplicas: 16
         queues:
           - [project_export, 1]
+        resources:
+          requests:
+            cpu: 50m
+            memory: 650M
+          limits:
+            cpu: 2
+            memory: 16G
     registry:
       tokenIssuer: omnibus-gitlab-issuer
     trusted_proxies:
