--- a/gstg.yaml
+++ b/gstg.yaml
@@ -13,6 +13,10 @@ gitlab:
     enabled: true
     image:
       tag: 0.9.1
+  sidekiq:
+    enabled: true
+    image:
+      tag: 12-7-202001151606-567a7811ae4-5db6dd45482
 
 global:
   appConfig:
