--- a/gstg.yaml
+++ b/gstg.yaml
@@ -124,6 +124,7 @@ global:
       name: registry.staging.gitlab.com
 
   psql:
+    database: gitlabhq_production_sidekiq
     host: pgbouncer-sidekiq.int.gstg.gitlab.net
     port: 6432
 
