Added missing secrets registry-storage and registry-httpsecret

--- a/releases/gitlab-secrets.yaml
+++ b/releases/gitlab-secrets.yaml
@@ -63,6 +63,32 @@ releases:
       - apiVersion: v1
         kind: Secret
         metadata:
+          name: registry-storage
+          namespace: gitlab
+        stringData:
+          config: |
+            gcs:
+              bucket: gitlab-gprd-registry
+              keyfile: /etc/docker/registry/storage/gcs.json
+            maintenance:
+              uploadpurging:
+                enabled: false
+            cache:
+              blobdescriptor: 'inmemory'
+            delete:
+              enabled: true
+          gcs.json: |
+{{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -r '.\"gitlab-server\".\"google-creds\".json_base64'")) | b64dec | trimSuffix "\n" | indent 14 }}
+      - apiVersion: v1
+        kind: Secret
+        metadata:
+          name: registry-httpsecret
+          namespace: gitlab
+        stringData:
+          secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.registry.http_secret'")) | quote }}
+      - apiVersion: v1
+        kind: Secret
+        metadata:
           name: gitlab-postgres-credential
           namespace: gitlab
         stringData:
