Fixed hardcoded name in gitlab-registry secret

--- a/releases/gitlab-secrets.yaml
+++ b/releases/gitlab-secrets.yaml
@@ -68,7 +68,7 @@ releases:
         stringData:
           config: |
             gcs:
-              bucket: gitlab-gprd-registry
+              bucket: gitlab-{{ .Environment.Name }}-registry
               keyfile: /etc/docker/registry/storage/gcs.json
             maintenance:
               uploadpurging:
