Move from using 1password to gkms for dev.gitlab.org registry api key

--- a/releases/gitlab-secrets.yaml
+++ b/releases/gitlab-secrets.yaml
@@ -23,7 +23,7 @@ releases:
     - google_project: {{ env "PROJECT" }}
     - gitlab_endpoint: {{ env "GITLAB_ENDPOINT" }}
 {{- $gkms_omnibus_secrets_base64 := (exec "bash" (list "-c" (print "gsutil cat gs://gitlab-" .Environment.Name "-secrets/gitlab-omnibus-secrets/" .Environment.Name ".enc | gcloud --project " .Values.google_project " kms decrypt --location global --keyring=gitlab-secrets --key " .Environment.Name " --ciphertext-file=- --plaintext-file=-")) | b64enc | quote) }}
-{{- $dev_gitlab_org_docker_pass := exec "bash" (list "-c" "op get item uboui2r5a5gxvjcsdk7anwft2q | jq -j '.details.fields[] | select( .name | contains(\"password\")).value'") }}
+{{- $dev_gitlab_org_docker_pass := exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -jc '.gitlab_k8s.\"k8s-workloads-deploy-token\"'")) }}
     - resources:
       - apiVersion: v1
         kind: Secret
