Fixed missing configuration settings on secrets
* added missing private key to registry-certificate
* Correct secret type for dev-registry-access

--- a/releases/gitlab-secrets.yaml
+++ b/releases/gitlab-secrets.yaml
@@ -27,6 +27,7 @@ releases:
     - resources:
       - apiVersion: v1
         kind: Secret
+        type: kubernetes.io/dockerconfigjson
         metadata:
           name: dev-registry-access
           namespace: gitlab
@@ -60,6 +61,8 @@ releases:
         stringData:
           registry-auth.crt: |
 {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -r '.\"omnibus-gitlab\".gitlab_rb.registry.internal_certificate'")) | indent 14 }}
+          registry-auth.key: |
+{{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -r '.\"omnibus-gitlab\".gitlab_rb.registry.internal_key'")) | indent 14 }}
       - apiVersion: v1
         kind: Secret
         metadata:
