Refactor helmfiles to not repeat ourselves

--- a/releases/gitlab-secrets.yaml
+++ b/releases/gitlab-secrets.yaml
@@ -1,12 +1,7 @@
 ---
-helmDefaults:
-  tillerNamespace: kube-system
-  tillerless: true
-  cleanupOnFail: false
-  wait: true
-  timeout: 600
-  recreatePods: true
-  force: true
+bases:
+  - "../bases/helmDefaults.yaml"
+  - "../bases/environments.yaml"
 
 repositories:
 # Kubernetes incubator repo of helm charts
@@ -20,9 +15,7 @@ releases:
   version: "0.2.3"
   installed: {{ env "GITLAB_SECRETS_INSTALLED" | default "true" }}
   values:
-    - google_project: {{ env "PROJECT" }}
-    - gitlab_endpoint: {{ env "GITLAB_ENDPOINT" }}
-{{- $gkms_omnibus_secrets_base64 := (exec "bash" (list "-c" (print "gsutil cat gs://gitlab-" .Environment.Name "-secrets/gitlab-omnibus-secrets/" .Environment.Name ".enc | gcloud --project " .Values.google_project " kms decrypt --location global --keyring=gitlab-secrets --key " .Environment.Name " --ciphertext-file=- --plaintext-file=-")) | b64enc | quote) }}
+{{- $gkms_omnibus_secrets_base64 := (exec "bash" (list "-c" (print "gsutil cat gs://gitlab-" .Environment.Name "-secrets/gitlab-omnibus-secrets/" .Environment.Name ".enc | gcloud --project " .Environment.Values.google_project " kms decrypt --location global --keyring=gitlab-secrets --key " .Environment.Name " --ciphertext-file=- --plaintext-file=-")) | b64enc | quote) }}
 {{- $dev_gitlab_org_docker_pass := exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -jc '.gitlab_k8s.\"k8s-workloads-deploy-token\"'")) }}
     - resources:
       - apiVersion: v1
@@ -42,7 +35,7 @@ releases:
         stringData:
           gitlab-object-storage.yml: |
               provider: Google
-              google_project: {{ .Values.google_project }}
+              google_project: {{ .Environment.Values.google_project }}
               google_json_key_string: |
 {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -r '.\"gitlab-server\".\"google-creds\".json_base64'")) | b64dec | trimSuffix "\n" | indent 16 }}
       - apiVersion: v1
